reafct : add static value